Problem_Statement_1/Kubernetes_Manifest_Files/Wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - port: 80
    targetPort: 4499
  type: ClusterIP
